--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^6.0.2",
+    "fs-extra": "^10.0.0",
     "mongoose": "^6.1.1",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "sortablejs": "^1.14.0"
   }
